# fluxo_mesa

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vitest.config.mjs
app/: globals.css  layout.tsx  page.tsx
components/: Alcada.tsx
components/flow/: FlowBuilder.tsx  Sidebar.tsx  SidebarButton.tsx  SidebarNode.tsx  SidebarNodeItem.tsx
components/flow/nodes/: AlcadaNode.tsx  DecisionNode.tsx  EndNode.tsx  StartNode.tsx
python/: README.md  pyproject.toml  requirements-dev.txt
python/examples/: FluxoCiviaCartaoCreditoLimiteCredito.bpmn
python/src/: __init__.py  bpmn_to_planilha.py
tests/: bpmn.test.ts  bpmnSpreadsheet.test.ts
types/: alcada.ts  decision.ts
utils/: bpmn.ts  bpmnSpreadsheet.ts
